--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 # App Files
 # =========================
 
+# =========================
 # Terraform
 # =========================
 
@@ -17,9 +18,6 @@
 #*.tfvars
 
 # =========================
-# Operating System Files
-# =========================
-
 # Windows
 # =========================
 
@@ -46,6 +44,7 @@ $RECYCLE.BIN/
 # Windows shortcuts
 *.lnk
 
+# =========================
 # Linux
 # =========================
 
@@ -63,7 +62,8 @@ $RECYCLE.BIN/
 # .nfs files are created when an open file is removed but is still being accessed
 .nfs*
 
-# OSX
+# =========================
+# macOS
 # =========================
 
 # General
@@ -73,7 +73,6 @@ $RECYCLE.BIN/
 
 # Icon must end with two \r
 Icon
-
 
 # Thumbnails
 ._*
